[package]
name = "powalert"
version = "0.1.0-alpha2"
authors = ["ben lamothe <bl@732.one>"]
license = "MIT"
description = "System battery and power status notifier."
homepage = "https://github.com/zonotope/powalert"
keywords = ["battery", "power", "notification"]
edition = "2018"

[dependencies]
battery = "0.7.5"
clap = "2.33.0"
humantime = "2.0.0"
log = "0.4.8"
notify-rust = "3.6.3"
simplelog = "0.7.4"
